[gd_scene load_steps=19 format=2]

[ext_resource path="res://src/Scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://src/Scenes/GlobalBg.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/icons/black_icons/audio.png" type="Texture" id=3]
[ext_resource path="res://assets/icons/black_icons/play.png" type="Texture" id=5]
[ext_resource path="res://assets/fonts/WhiteOutlines-3mGp.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://assets/icons/black_icons/settings.png" type="Texture" id=7]
[ext_resource path="res://assets/icons/black_icons/user.png" type="Texture" id=8]
[ext_resource path="res://assets/icons/black_icons/remove.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=1]
size = 99
font_data = ExtResource( 6 )

[sub_resource type="Animation" id=11]
resource_name = "BASE"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 768 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "UP"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 768 ), Vector2( 0, 320 ) ]
}

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=5]
size = 40
font_data = ExtResource( 6 )

[sub_resource type="Animation" id=6]
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 769, 211.891 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 769, 211.891 ), Vector2( 320, 214.891 ) ]
}

[sub_resource type="DynamicFont" id=8]
size = 70
font_data = ExtResource( 6 )

[sub_resource type="Animation" id=9]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 263.716, 768 ) ]
}

[sub_resource type="Animation" id=10]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 263.716, 768 ), Vector2( 267.574, 557 ) ]
}

[node name="MainMenu" type="Node2D"]
script = ExtResource( 1 )

[node name="BackgroundControl" parent="." instance=ExtResource( 2 )]

[node name="Titulo" type="RichTextLabel" parent="."]
margin_left = 96.0
margin_top = 64.0
margin_right = 688.0
margin_bottom = 194.0
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Jogo dos 15"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Config" type="Button" parent="."]
margin_top = 624.0
margin_right = 140.0
margin_bottom = 758.0
toggle_mode = true
icon = ExtResource( 7 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfigButtons" type="VBoxContainer" parent="."]
margin_top = 768.0
margin_right = 140.0
margin_bottom = 1040.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TrashCan" type="Button" parent="ConfigButtons"]
margin_right = 140.0
margin_bottom = 134.0
icon = ExtResource( 9 )
flat = true
__meta__ = {
"_edit_lock_": true
}

[node name="HSeparator" type="HSeparator" parent="ConfigButtons"]
visible = false
margin_top = 138.0
margin_right = 140.0
margin_bottom = 142.0
__meta__ = {
"_edit_lock_": true
}

[node name="Mute" type="Button" parent="ConfigButtons"]
margin_top = 138.0
margin_right = 140.0
margin_bottom = 272.0
toggle_mode = true
shortcut_in_tooltip = false
icon = ExtResource( 3 )
flat = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="ConfigButtons"]
anims/BASE = SubResource( 11 )
anims/UP = SubResource( 12 )

[node name="NovoJogo" type="Button" parent="."]
margin_left = 320.0
margin_top = 624.0
margin_right = 460.0
margin_bottom = 758.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
toggle_mode = true
icon = ExtResource( 5 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Profile" type="Button" parent="."]
margin_left = 624.0
margin_top = 624.0
margin_right = 764.0
margin_bottom = 758.0
toggle_mode = true
icon = ExtResource( 8 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProfilePage" type="TextureRect" parent="."]
margin_left = 768.0
margin_top = 192.0
margin_right = 1226.0
margin_bottom = 640.0
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Scores" type="RichTextLabel" parent="ProfilePage"]
margin_left = 6.0
margin_top = 3.0
margin_right = 458.0
margin_bottom = 365.0
custom_fonts/normal_font = SubResource( 5 )
text = "Gabriel
lvl 1:
lvl2:
lvl3:
lvl4:
lvl:5"
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="ProfilePage"]
anims/profile = SubResource( 6 )
"anims/profile slide left" = SubResource( 7 )

[node name="PickLevel" type="HBoxContainer" parent="."]
visible = false
margin_left = 234.0
margin_top = 768.0
margin_right = 526.0
margin_bottom = 848.0
rect_scale = Vector2( 0.96452, 0.761261 )

[node name="VSeparator" type="VSeparator" parent="PickLevel"]
visible = false
margin_right = 4.0
margin_bottom = 80.0

[node name="Button" type="Button" parent="PickLevel"]
margin_right = 42.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 8 )
text = "1"
flat = true
__meta__ = {
"_edit_lock_": true
}

[node name="VSeparator6" type="VSeparator" parent="PickLevel"]
visible = false
margin_left = 54.0
margin_right = 58.0
margin_bottom = 80.0
__meta__ = {
"_edit_lock_": true
}

[node name="Button2" type="Button" parent="PickLevel"]
margin_left = 46.0
margin_right = 99.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 8 )
text = "2"
flat = true
__meta__ = {
"_edit_lock_": true
}

[node name="VSeparator2" type="VSeparator" parent="PickLevel"]
visible = false
margin_left = 111.0
margin_right = 115.0
margin_bottom = 80.0
__meta__ = {
"_edit_lock_": true
}

[node name="Button3" type="Button" parent="PickLevel"]
margin_left = 103.0
margin_right = 158.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 8 )
text = "3"
flat = true
__meta__ = {
"_edit_lock_": true
}

[node name="VSeparator3" type="VSeparator" parent="PickLevel"]
visible = false
margin_left = 119.0
margin_right = 123.0
margin_bottom = 80.0
__meta__ = {
"_edit_lock_": true
}

[node name="Button4" type="Button" parent="PickLevel"]
margin_left = 162.0
margin_right = 217.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 8 )
text = "4"
flat = true
__meta__ = {
"_edit_lock_": true
}

[node name="VSeparator4" type="VSeparator" parent="PickLevel"]
visible = false
margin_left = 178.0
margin_right = 182.0
margin_bottom = 80.0
__meta__ = {
"_edit_lock_": true
}

[node name="Button5" type="Button" parent="PickLevel"]
margin_left = 221.0
margin_right = 276.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 8 )
text = "5"
flat = true
__meta__ = {
"_edit_lock_": true
}

[node name="VSeparator5" type="VSeparator" parent="PickLevel"]
visible = false
margin_left = 237.0
margin_right = 241.0
margin_bottom = 80.0
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="PickLevel"]
anims/pic = SubResource( 9 )
anims/up = SubResource( 10 )
[connection signal="toggled" from="Config" to="." method="_on_Config_toggled"]
[connection signal="pressed" from="ConfigButtons/TrashCan" to="." method="_on_TrashCan_pressed"]
[connection signal="button_down" from="ConfigButtons/Mute" to="." method="_on_Mute_button_down"]
[connection signal="button_up" from="ConfigButtons/Mute" to="." method="_on_Mute_button_up"]
[connection signal="toggled" from="ConfigButtons/Mute" to="." method="_on_Mute_toggled"]
[connection signal="pressed" from="NovoJogo" to="." method="_on_NovoJogo_pressed"]
[connection signal="toggled" from="Profile" to="." method="_on_Profile_toggled"]
[connection signal="pressed" from="PickLevel/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="PickLevel/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="PickLevel/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="PickLevel/Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="PickLevel/Button5" to="." method="_on_Button5_pressed"]
